--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
@@ -42,6 +45,7 @@
 }
 
 .scan-button {
+  width: 150px;
   display: inline-block;
   border-radius: 5px;
   font-size: 16px;
@@ -54,4 +58,12 @@
   box-shadow: 0px 0px 5px 5px rgba(110,216,239,1);
   background-color: black;
   color: white;
+}
+
+.scan-button-container {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  gap: 30px; /* 任意のマージンを設定 */
+  align-items: center;
 }
